--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
+    - name: Checkout repository
+        uses: actions/checkout@v4 # use the latest version
+        
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
