--- a/.github/workflows/mlflow.yml
+++ b/.github/workflows/mlflow.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install mlflow
+        pip install mlflow pytest
 
     - name: Run Training Script
       env:
@@ -44,4 +44,8 @@ jobs:
         nohup python schedule_job.py &
 
     - name: Run Tests
-            run: pytest test.py
+      env:
+        MLFLOW_TRACKING_URI: "http://0.0.0.0:5001"
+      run:
+        pytest test.py
+
