--- a/.github/workflows/mlflow.yml
+++ b/.github/workflows/mlflow.yml
@@ -29,23 +29,23 @@ jobs:
 
     - name: Run Training Script
       env:
-        MLFLOW_TRACKING_URI: "http://0.0.0.0:5001"
+        MLFLOW_TRACKING_URI: "http://localhost:5001"
       run: python train.py
 
     - name: Run Model Registry Update
       env:
-        MLFLOW_TRACKING_URI: "http://0.0.0.0:5001"
+        MLFLOW_TRACKING_URI: "http://localhost:5001"
       run: python automation_md_registry.py
 
     - name: Schedule Retraining Job
       env:
-        MLFLOW_TRACKING_URI: "http://0.0.0.0:5001"
+        MLFLOW_TRACKING_URI: "http://localhost:5001"
       run: |
         nohup python schedule_job.py &
 
     - name: Run Tests
       env:
-        MLFLOW_TRACKING_URI: "http://0.0.0.0:5001"
+        MLFLOW_TRACKING_URI: "http://localhost:5001"
       run:
         pytest test.py
 
